--- a/views/index.jade
+++ b/views/index.jade
@@ -1,15 +1,20 @@
 extends layout
 
 block content
+  nav.navbar.navbar-default.navbar-fixed-top#navbar(role='navigation')
+    .collapse.navbar-collapse.navbar-ex5-collapse
+      ul.nav.navbar-nav
+        li.active
+          a(href='/') Music
+        li
+          a(href='/songs/new') Add Songs
   h1= title
   p Welcome to #{title}
   audio#radioStream
   script
     window.addEventListener('load', onLoad, false);
     function onLoad() {
-      console.log("loading")
       var audio = document.getElementById('radioStream')
-      console.log(audio)
       audio.src = 'http://localhost:3000/radio'
       audio.play();
     }
