--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,11 @@ doctype 5
 html
   head
     title= title
+    script(src="/javascripts/jquery.min.js")
+    script(src="/javascripts/bootstrap.min.js")
+    script(src="/javascripts/bootstrap-slider.js")
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/slider.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
