--- a/views/index.jade
+++ b/views/index.jade
@@ -9,30 +9,38 @@ block content
         li
           a(href='/songs/new') Add Songs
   .container
-    .row
-      .col-md-2
-        input.slider.slider1(type='text', value='')
-        span Energy
-      .col-md-2
-        input.slider.slider2(type='text', value='')
-        span Dancability
-      .col-md-2
-        input.slider.slider3(type='text', value='')
-        span Acousticness
-      .col-md-2
-        input.slider.slider4(type='text', value='')
-        span Attr4
-      .col-md-2
-        input.slider.slider5(type='text', value='')
-        span Atrr 5
-      .col-md-2
-        input.slider.slider6(type='text', value='')
-        span Attr 6
-    .row
-      .col-md-12.text-center
-        button.btn.btn-success.btn-lg Next
+    .jumbotron
+      .row
+        .col-md-2
+          input.slider.slider1(type='text', value='')
+          br
+          span.slider-label Energy
+        .col-md-2
+          input.slider.slider2(type='text', value='')
+          br
+          span.slider-label Dancability
+        .col-md-2
+          input.slider.slider3(type='text', value='')
+          br
+          span.slider-label Acousticness
+        .col-md-2
+          input.slider.slider4(type='text', value='')
+          br
+          span.slider-label Liveness
+        .col-md-2
+          input.slider.slider5(type='text', value='')
+          br
+          span.slider-label Speechiness
+        .col-md-2
+          input.slider.slider6(type='text', value='')
+          span.selected-key C#
+          br
+          span.slider-label Key
+      .row
+        .col-md-12.text-center
+          button.btn.btn-success.btn-lg Next Song
   audio#radioStream
-  script
+  script.
     window.addEventListener('load', onLoad, false);
     function onLoad() {
       for(var i=1; i<7; i++){
@@ -46,6 +54,9 @@ block content
           selection: 'after'
         })
       }
+      $.each($('.slider-label'), function(i, obj){
+        $(obj).css('margin-left', '-'+($(obj).width()/3).toString()+'px' )
+      })
       var audio = document.getElementById('radioStream')
       audio.src = 'http://localhost:3000/radio'
       audio.play();
