using tempo instead of key

--- a/views/index.jade
+++ b/views/index.jade
@@ -33,9 +33,7 @@ block content
           span.slider-label Speechiness
         .col-md-2
           input.slider.slider6(type='text', value='')
-          span.selected-key C#
-          br
-          span.slider-label Key
+          span.slider-label Speed
       .row
         .col-md-12.text-center
           button.btn.btn-success.btn-lg Next Song
