--- a/views/index.jade
+++ b/views/index.jade
@@ -66,7 +66,7 @@ block content
           function(data){
             console.log(data);
             var audio = document.getElementById('radioStream')
-            audio.src = 'http://localhost:3000/radio/6991-1tgvunm';
+            audio.src = 'http://localhost:3000/radio/'+data.file;
             audio.play();
         });
       });
