--- a/views/song_new.jade
+++ b/views/song_new.jade
@@ -10,16 +10,25 @@ block content
   .container
     .jumbotron
       form( method="post", enctype="multipart/form-data")
+        #accordion.panel-group
         .row
-          .input-group.input-group-lg
-            span.input-group-addon Title
-            input.form-control.input-lg(type='text', placeholder='Rhythm n’ Beat', name="title", id="editSongTitle")
+          input(type="file", name="song")
         .row
-          .input-group.input-group-lg
-            span.input-group-addon Artist
-            input.form-control.input-lg(type='text', placeholder='Figrin D\'an and the Modal Nodes', name="title", id="editSongArtist")
-        .row
-            input(type="file", name="song")
+          .panel.panel-default
+            .panel-heading
+              a(data-toggle='collapse', data-parent='#accordion', href='#collapseOne')
+                h4.panel-title
+                  | Add extra information
+              #collapseOne.panel-collapse.collapse
+                .panel-body
+                  .row
+                    .input-group.input-group-lg
+                      span.input-group-addon Title
+                      input.form-control.input-lg(type='text', placeholder='Rhythm n’ Beat', name="title", id="editSongTitle")
+                  .row
+                    .input-group.input-group-lg
+                      span.input-group-addon Artist
+                      input.form-control.input-lg(type='text', placeholder='Figrin D\'an and the Modal Nodes', name="title", id="editSongArtist")
         .row
           #editSongSubmit
             input.btn.btn-success(type="submit", value="Upload")
