removing unneeded value

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,27 +12,27 @@ block content
     .jumbotron
       .row
         .col-md-2
-          input.slider#slider1(type='text', value='5')
+          input.slider#slider1(type='text')
           br
           span.slider-label Energy
         .col-md-2
-          input.slider#slider2(type='text', value='5')
+          input.slider#slider2(type='text')
           br
           span.slider-label Danceability
         .col-md-2
-          input.slider#slider3(type='text', value='5')
+          input.slider#slider3(type='text')
           br
           span.slider-label Acousticness
         .col-md-2
-          input.slider#slider4(type='text', value='5')
+          input.slider#slider4(type='text')
           br
           span.slider-label Liveness
         .col-md-2
-          input.slider#slider5(type='text', value='5')
+          input.slider#slider5(type='text')
           br
           span.slider-label Speechiness
         .col-md-2
-          input.slider#slider6(type='text', value='5')
+          input.slider#slider6(type='text')
           br
           span.slider-label Mood
       .row
