using better title and favicon

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype 5
 html
   head
-    title= title
+    title= "Peter Klipfel | Radio"
     script(src="/javascripts/jquery.min.js")
     script(src="/javascripts/bootstrap.min.js")
     script(src="/javascripts/bootstrap-slider.js")
