--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,10 @@ block content
           a(href='/') Music
         li
           a(href='/songs/new') Add Songs
+      ul.nav.navbar-nav.navbar-right
+        li
+          a(href='http://peterklipfel.com') 
+           strong Peter Klipfel
   .container
     .jumbotron
       .row
